add music directory, some cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
 			margin-left: 1em;
 			float:left;
 		}
+		#links {
+			margin-top: 1em;
+			width: 160px;
+/*			position: fixed;
+			bottom: 0%;
+			margin-bottom: 1em;
+			margin-left: 1em;
+			width: 100%;*/
+
+		}
 
 		// Small screens
 		@media only screen { 
@@ -86,6 +96,13 @@
 			<li>musician</li>
 			<li>photographer</li>
 		</ul>
+	<div id="links">
+		<span class="myButton"><a class="outbound" href="http://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
+		<span class="myButton"><a class="outbound" href="http://www.linkedin.com/in/goldsmith"><span class="genericon genericon-linkedin"></span></a></span>
+		<span class="myButton"><a class="outbound-mobile" href="http://instagram.com/kevingoldsmith"><span class="genericon genericon-instagram"></span></a></span>
+		<span class="myButton"><a class="outbound-mobile" href="http://www.youtube.com/kevingoldsmith"><span class="genericon genericon-youtube"></span></a></span>
+		<span class="myButton"><a class="outbound" href="https://github.com/kevingoldsmith"><span class="genericon genericon-github"></span></a></span>
+	</div>
 	</div>
 </body>
 </html>
