--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,47 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html itemscope itemtype="http://schema.org/Person">
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# profile: http://ogp.me/ns/profile#">
 	<title>Kevin Goldsmith</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
+    <meta name="description" content="Kevin Goldsmith's personal site: resume, writing, list of talks, music and photography.">
+    <meta name="author" content="Kevin Goldsmith">
+    <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
+
+    <!-- Facebook Open Graph tags -->
+    <meta property="og:title" content="Kevin Goldsmith's home page"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:url" content="http://www.kevingoldsmith.com/"/>
+    <meta property="og:image" content="http://www.kevingoldsmith.com/img/me-camera@2x.jpg"/>
+    <meta property="og:site_name" content="Kevin Goldsmith"/>
+    <meta property="fb:app_id" content="1424023427843179"/>
+    <meta property="og:description" content="Kevin Goldsmith's personal site: resume, writing, list of talks, music and photography."/>
+    <meta property="profile:first_name" content="Kevin"/>
+    <meta property="profile:last_name" content="Goldsmith"/>
+    <meta property="profile:username" content="kevingoldsmith" />
+    <meta property="profile:gender" content="male"/>
+    <meta property="fb:profile_id" content="730242608"/>
+    <meta property="fb:admins" content="730242608"/>
+
+    <!-- Twtter Card tags -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@kevingoldsmith"/>
+    <meta name="twitter:creator" content="@kevingoldsmith"/>
+    <meta name="twitter:title" content="Kevin Goldsmith's home page"/>
+    <meta name="twitter:description" content="Kevin Goldsmith's personal site: resume, writing, list of talks, music and photography."/>
+    <meta name="twitter:image" content="http://www.kevingoldsmith.com/img/me-camera@2x.jpg"/>
+    <meta name="twitter:domain" content="www.kevingoldsmith.com"/>
+    <meta name="twitter:url" content="http://www.kevingoldsmith.com/">
+
+    <!-- Google tags -->
+    <meta itemprop="name" content="Kevin Goldsmith">
+    <meta itemprop="description" content="Kevin Goldsmith&#39;s personal site: resume, writing, list of talks, music and photography.">
+    <!--- <meta itemprop="image" content="http://www.kevingoldsmith.com/img/me-camera@2x.jpg"> -->
+
+    <!-- Styling -->
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/genericons.css" />	
+    <link rel="stylesheet" href="css/genericons.css" />
 	<style>
 		h1 {
 			font-size: 4em;
@@ -22,6 +60,9 @@
 			margin-top: 6em;
 			float:left;
 		}
+		#name {
+			font-size: 3em;
+		}
 		#menu {
 			margin-top: 6.2em;
 			margin-left: 1em;
@@ -36,7 +77,7 @@
 		}
 
 		// Small screens
-		@media only screen { 
+		@media only screen {
 		} /* Define mobile styles */
 
 		@media only screen and (max-width: 40em) {
