--- a/public/resume.html
+++ b/public/resume.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Kevin Goldsmith: Resume</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Kevin Goldsmith: Technology Leader">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
+	<meta name="description" content="The resume of Kevin Goldsmith, Technology Senior Leader">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
+	<title>Kevin Goldsmith: Resume</title>
 
     <!-- Google ownership links -->
     <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
@@ -175,7 +174,7 @@
 	}
 	footer {
 		padding: 0em 0em 0em .5em;
-	}	
+	}
 } /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
 
 // XLarge screens
