--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 			margin-top: 0em;
 			text-align: right;
 			line-height: 80%;
+			width:5em;
 		}
 		ul {
 			list-style-type: none;
@@ -127,13 +128,13 @@
 	</style>
 </head>
 <body>
-	<div id="header"><h1>Kevin<br>Goldsmith</h1></div>
+	<div id="header"><h1>Kevin Goldsmith</h1></div>
 	<div id="menu">
 		<ul>
 			<li><a href="resume.html">technology leader</a></li>
 			<li><a href="talks/index.html">speaker</a></li>
-			<li>writer</li>
-			<li>musician</li>
+			<li><a href="writing.html">writer</a></li>
+			<li><a href="music/index.html">musician</a></li>
 			<li>photographer</li>
 		</ul>
 		<div id="links">
