cleanup and consistency checkpoint

--- a/public/index.html
+++ b/public/index.html
@@ -134,8 +134,8 @@
 			<li><a href="resume.html">technology leader</a></li>
 			<li><a href="talks/index.html">speaker</a></li>
 			<li><a href="writing.html">writer</a></li>
-			<li><a href="music/index.html">musician</a></li>
-			<li>photographer</li>
+			<li><a href="music.html">musician</a></li>
+			<li><a href="photography.html">photographer</a></li>
 		</ul>
 		<div id="links">
 			<span class="myButton"><a class="outbound" href="http://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
@@ -145,5 +145,8 @@
 			<span class="myButton"><a class="outbound" href="https://github.com/kevingoldsmith"><span class="genericon genericon-github"></span></a></span>
 		</div>
 	</div>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/googleevents.js"></script>
 </body>
 </html>
