--- a/public/music.html
+++ b/public/music.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
 
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <!-- Google ownership links -->
     <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
@@ -79,18 +79,18 @@
         <h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
         <div id="site-nav">
             <ul>
-                <li><a href="../resume.html">technology leader</a></li>
-                <li><a href="../talks/index.html">speaker</a></li>
-                <li><a href="../writing.html">writer</a></li>
+                <li><a href="resume.html">technology leader</a></li>
+                <li><a href="talks/index.html">speaker</a></li>
+                <li><a href="writing.html">writer</a></li>
                 <li class="current-page">musician</li>
-                <li><a href="../photography.html">photographer</a></li>
+                <li><a href="photography.html">photographer</a></li>
             </ul>
         </div>
     </header>
     <div id="content">
         <div id="music-links">
             <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:user:intonarumori&size=basic&theme=light&show-count=0" width="100" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden; margin-top:10px" allowtransparency="true"></iframe>
-            <a class="outbound my-button" href="http://intonarumori.com/"><img src="intLogo.png" data-at2x="intLogo@2x.png" /></a>
+            <a class="outbound my-button" href="http://intonarumori.com/"><img src="img/intLogo.png" data-at2x="img/intLogo@2x.png" /></a>
         </div>
         <div class="ut"><iframe class="ut youtube" src="//www.youtube.com/embed/Qw3YQL2Z_ZE?rel=0" frameborder="0" allowfullscreen></iframe></div>
         <h2>SOLO RECORDINGS (as Answers to April)</h2>
@@ -204,6 +204,6 @@
         kevingoldsmith.com
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/googleevents.js"></script>
+    <script src="js/googleevents.js"></script>
     </body>
 </html>
