added upcoming conferences

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,15 @@
 		}
 		#links {
 			margin-top: 1em;
-			width: 143px;
+			width: 185px;
+		}
+		.genericon {
+			width: 24px;
+			height: 24px;
+			font-size: 24px;
+		}
+		.myButton {
+			padding: 4px 4px 9px 3px;
 		}
 
 		// Small screens
