--- a/public/music.html
+++ b/public/music.html
@@ -17,13 +17,6 @@
     <link rel="publisher" href="https://plus.google.com/111904464094073716491" />
 
     <style type="text/css">
-        #music-links {
-            text-align: right;
-            vertical-align: middle;
-        }
-        #music-links img {
-            margin-bottom: 17px;
-        }
         section {
             clear: both;
         }
@@ -88,21 +81,17 @@
         </div>
     </header>
     <div id="content">
-        <div id="music-links">
-            <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:user:intonarumori&size=basic&theme=light&show-count=0" width="100" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden; margin-top:10px" allowtransparency="true"></iframe>
-            <a class="outbound my-button" href="http://intonarumori.com/"><img src="img/intLogo.png" data-at2x="img/intLogo@2x.png" /></a>
-        </div>
         <div class="ut"><iframe class="ut youtube" src="//www.youtube.com/embed/Qw3YQL2Z_ZE?rel=0" frameborder="0" allowfullscreen></iframe></div>
-        <h2>SOLO RECORDINGS (as Answers to April)</h2>
+        <h2>Solo Recordings (<a class="outbound" href="https://answerstoapril.com/">Answers to April</a>)</h2>
         <section id="A2ASoloReleases" class="release-box-list">
-            <h3>SOLO RELEASES</h3>
+            <h3>Solo Releases</h3>
             <ul>
                 <li><a href="http://unitcircle.com/rekkids/releases/tUC091/"><img src="http://unitcircle.com/rekkids/img/tUC091-large.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC091/"><span class="release-album">Lilium EP</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only EP</span>, <span class="release-year">2015</span></div></li>
             </ul>
         </section>
-        <h2 style="margin-top: 14em">SOLO RECORDINGS (as Intonarumori)</h2>
+        <h2 style="margin-top: 14em">Solo Recordings (<a href="https://intonarumori.com">Intonarumori</a>)</h2>
         <section id="IntonarumoriSoloReleases" class="release-box-list">
-            <h3>SOLO RELEASES</h3>
+            <h3>Solo Releases</h3>
             <ul>
                 <li><a href="http://unitcircle.com/rekkids/releases/tUC090/"><img src="http://unitcircle.com/images/UCReleases/tUC090-big.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC090/"><span class="release-album">L-ST</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only EP</span>, <span class="release-year">2013</span></div></li>
                 <li><a href="http://www.singularsphere.com/releases/ss1.html"><img src="http://unitcircle.com/images/UCReleases/tUC089-big.jpg" /></a><div><a href="http://www.singularsphere.com/releases/ss1.html"><span class="release-album">GTR Remix</span></a>, <span class="release-recordlabel">Singular Sphere Records</span>, <span class="release-media">CD</span>, <span class="release-year">2004</span></div></li>
@@ -112,7 +101,7 @@
             </ul>
         </section>
         <section id="intonarumori-compilations">
-            <h3>COMPILATIONS</h3>
+            <h3>Compilations</h3>
             <ul>
                 <li><span class="release-album">Unit Circle Compilation</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Cassette</span>, <span class="release-year">1991</span></li>
                 <li><span class="release-song">Constant Bit Select of a Vector Net</span>, <span class="release-album">RMI Mind/Body Vol. 1</span>, <span class="release-recordlabel">Atomic Novelties</span>, <span class="release-media">2CD</span>, <span class="release-year">1992</span></li>
@@ -129,7 +118,7 @@
             </ul>
         </section>
         <section id="IntonarumoriSingles" class="release-box-list">
-            <h3>SINGLES</h3>
+            <h3>Singles</h3>
             <ul>
                 <li><img src="http://www.intonarumori.com/images/cursedreamcover300x300.jpg" /><div><span class="release-song">A Curse Uttered, A Dream Forgotten</span>, <span class="release-recordlabel">Singular Sphere Records</span>, <span class="release-media">MP3 single</span>, <span class="release-year">2008</span></div></li>
                 <li><img src="http://www.intonarumori.com/images/fridhemsplancover300x300.jpg" /><div><span class="release-song">Fridhemsplan</span>, <span class="release-recordlabel">self-released<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2013</span></div></li>
@@ -138,9 +127,9 @@
         <div id="soundcloud" class="ut">
             <iframe width="90%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/2327847&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
         </div>
-        <h2>GROUP RECORDINGS</h2>
+        <h2>Group Recordings</h2>
         <section>
-            <h3>RELEASES</h3>
+            <h3>Releases</h3>
             <ul>
                 <li><span class="release-band">Vassily</span> - <span class="release-album">Faster 4A, Kill, Kill</span> - <span class="release-recordlabel">self-released</span>, <span class="release-media">Cassette</span>, <span class="release-year">1994</span></li>
                 <li><span class="release-band">Vassily</span> - <span class="release-album">Kym / Allegory</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">7&quot; Vinyl Single</span>, <span class="release-year">1994</span></li>
@@ -150,7 +139,7 @@
             </ul>
         </section>
         <section>
-            <h3>COMPILATIONS</h3>
+            <h3>Compilations</h3>
             <ul>
                 <li><span class="release-band">Vassily</span> - <span class="release-song">Highgate</span>, <span class="release-album">Nocturne Concrète Compilation</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">CD</span>, <span class="release-year">1996</span></li>
                 <li><span class="release-band">The Rotary Fields</span> - <span class="release-song">Red Sea</span>, <span class="release-album">Nocturne Concrète Compilation</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">CD</span>, <span class="release-year">1996</span></li>
@@ -160,7 +149,7 @@
         <div class="ut">
             <iframe class="youtube" src="//www.youtube.com/embed/WprxBfODLkE?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
-        <h2>GUEST PERFORMER</h2>
+        <h2>Guest Performer</h2>
         <section>
             <ul>
                 <li><span class="release-band">The Queen Annes</span> - Cello Arrangements, 2nd Cello - <span class="release-song">Please Come Back</span>, <span class="release-album">Revenge!</span> - <span class="release-recordlabel">Vagrant Records</span>, <span class="release-media">CD</span>, <span class="release-year">1999</span></li>
@@ -168,7 +157,7 @@
                 <li><span class="release-band">bios+a+ic</span>, <span class="release-song">Forever Is Another Place</span> &amp; <span class="release-song">15 Degrees</span>, <span class="release-album">Texture Blue</span> - <span class="release-recordlabel">Entropic Advance</span>, <span class="release-media">CD</span>, <span class="release-year">2003</span></li>
             </ul>
         </section>
-        <h2>PRODUCER</h2>
+        <h2>Producer</h2>
         <section>
             <ul>
                 <li><span class="release-album">Unit Circle Compilation</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Cassette</span>, <span class="release-year">1991</span></li>
@@ -190,7 +179,7 @@
         <div class="ut">
             <iframe class="spotify" src="https://embed.spotify.com/?uri=spotify:user:intonarumori:playlist:2cM9FHtLZznQVtxTiOYcVW" frameborder="0" allowtransparency="true"></iframe>
         </div>
-        <h2>OTHER</h2>
+        <h2>Other</h2>
         <section>
             <ul>
                 <li>16 Shades of Spring - Magical Pony Productions - Produced several new longform musical compositions and vignettes for original theatre production - presented at The Empty Space Theatre, Seattle, WA - <span class="release-year">1996</span></li>
