--- a/public/photography.html
+++ b/public/photography.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
-	<meta name="description" content="The resume of Kevin Goldsmith, Technology Senior Leader">
+	<meta name="description" content="Photography by Kevin Goldsmith">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
