--- a/public/resume.html
+++ b/public/resume.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kevin Goldsmith">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
-	<title>Resume: Kevin Goldsmith</title>
+	<title>resume: Kevin Goldsmith</title>
 
     <!-- Google ownership links -->
     <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
