updated Avvo job description

--- a/public/resume.html
+++ b/public/resume.html
@@ -247,7 +247,7 @@
 								<div class="job-city">Seattle, WA</div>
 							</div>
 							<div class="job-description">
-							Responsible for all product development, data science, data engineering, business technology support, and IT for this venture-funded, growing startup.
+							Responsible for leading the software development, test, data engineering, data science, dev-ops and IT functions. I grew the organization from 51 to 77 while significantly improving diversity, improving productivity, and morale. Profit grew consistently during my tenure leading to a successful exit via acquisition by Internet Brands in February 2018.
 							</div>
 						</li>
 						<li>
