--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,9 @@
 			h1 {
 				font-size: 2.5em;
 				text-align: center;
-				line-height: 100%
+				line-height: 100%;
+				margin-left: auto;
+				margin-right: auto;
 			}
 			li {
 				text-align: center;
