fixing up URLs, starting point

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
 	<div id="menu">
 		<ul>
 			<li><a href="resume.html">technology leader</a></li>
-			<li><a href="talks/index.html">speaker</a></li>
+			<li><a href="talks/">speaker</a></li>
 			<li><a href="writing.html">writer</a></li>
 			<li><a href="music.html">musician</a></li>
 			<li><a href="photography.html">photographer</a></li>
