added cannonical links

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Kevin Goldsmith's personal site: resume, writing, list of talks, music and photography.">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
+    <link rel="canonical" href="https://kevingoldsmith.com" />
 
     <!-- Facebook Open Graph tags -->
     <meta property="og:title" content="Kevin Goldsmith's home page"/>
