--- a/public/music.html
+++ b/public/music.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Music created by Kevin Goldsmith">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
+    <link rel="canonical" href="https://kevingoldsmith.com/music.html" />
 
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
     <link rel="stylesheet" href="css/main.css" />
@@ -69,11 +70,11 @@
 </head>
 <body>
     <header id="header">
-        <h1 id="name"><a href="https://kevingoldsmith.com/">Kevin Goldsmith</a></h1>
+        <h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
         <div id="site-nav">
             <ul>
                 <li><a href="resume.html">technology leader</a></li>
-                <li><a href="talks/index.html">speaker</a></li>
+                <li><a href="talks/">speaker</a></li>
                 <li><a href="writing.html">writer</a></li>
                 <li class="current-page">musician</li>
                 <li><a href="photography.html">photographer</a></li>
