--- a/public/photography.html
+++ b/public/photography.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
 	<title>Photography: Kevin Goldsmith</title>
+	<link rel="canonical" href="https://kevingoldsmith.com/photography.html" />
 
     <!-- Google ownership links -->
     <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
