get rid of non-seo-valuable h1s and replace with divs more switching to absolute paths in generated files. Writing and Talks is done

--- a/public/music.html
+++ b/public/music.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <header id="header">
-        <h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
+        <div id="name"><a href="index.html">Kevin Goldsmith</a></div>
         <div id="site-nav">
             <ul>
                 <li><a href="resume.html">technology leader</a></li>
