--- a/public/photography.html
+++ b/public/photography.html
@@ -50,7 +50,7 @@
 <body>
 <!-- thanks to https://codepen.io/eksch/pen/xwdOeK for the page navigation code example (I had to tweak some)  -->
 	<header id="header">
-		<h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
+        <div id="name"><a href="index.html">Kevin Goldsmith</a></div>
 		<div id="site-nav">
 			<ul>
 				<li><a href="resume.html">technology leader</a></li>
