--- a/public/resume.html
+++ b/public/resume.html
@@ -195,7 +195,7 @@
 <body>
 <!-- thanks to https://codepen.io/eksch/pen/xwdOeK for the page navigation code example (I had to tweak some)  -->
 	<header id="header">
-		<h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
+        <div id="name"><a href="index.html">Kevin Goldsmith</a></div>
 		<div id="site-nav">
 			<ul>
 				<li class="current-page">technology leader</li>
