small grammar fix

--- a/public/talks/bookme.html
+++ b/public/talks/bookme.html
@@ -87,7 +87,7 @@
                     <p>I want the functions that I participate in to be inclusive and safe for all participants. I will ask to see your Code of Conduct before the event, and I expect you to hold your participants (including me) to it.</p>
 
                     <h3>A Diverse Collection of Speakers</h3>
-                    <p>I think that the best thing we can do as an industry is bringing a broader diversity of voices into it. For events that I am part of I expect that organizers have made their best effort to include a diverse set of speakers. I would be happy to give up my place on a panel or my speaking slot if it would allow someone from an underrepresented group to have their voice heard.</p>
+                    <p>I think that the best thing we can do as an industry is bring a broader diversity of voices into it. For events that I am part of I expect that organizers have made their best effort to include a diverse set of speakers. I would be happy to give up my place on a panel or my speaking slot if it would allow someone from an underrepresented group to have their voice heard.</p>
 
                     <h3>Travel and Expenses</h3>
                     <p>I’m an independent speaker without the support of a large corporation. So, I currently cannot sponsor your event. In fact, I’ll need my travel and expenses to be covered by you. I live in Seattle, WA so this means that I’ll need my round-trip flight from SeaTac International Airport (SEA) and hotel paid for by your organization. If the plane flight is longer than five hours, I would appreciate if you would cover tickets at the Economy Plus or better level. If I am crossing more than four time zones, I may request an extra night of hotel so that I can be at my best at your event.</p>
