added font face observer to switch fonts on load

--- a/public/talks/bookme.html
+++ b/public/talks/bookme.html
@@ -120,6 +120,7 @@
             <script src="../js/modernizr.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="../js/googleevents.js"></script>
+            <script src="../js/fontfaceobserver.js"></script>
             <script type="text/javascript">
                 function toggleVisible(idtotoggle) {
                     var x = document.getElementById(idtotoggle);
@@ -131,5 +132,5 @@
                 }
             </script>
     </body>
-    <!-- Shameless inspired by https://anjuansimmons.com/booking/ Thanks Anjuan! -->
+    <!-- Shamelessly inspired by https://anjuansimmons.com/booking/ Thanks Anjuan! -->
 </html>
