fixed Makefile, updated dates for JAX, linked to nimbleautonomy for paid speaking

--- a/public/talks/bookme.html
+++ b/public/talks/bookme.html
@@ -99,7 +99,7 @@
                     <p>Please reimburse me promptly. I try to make my travel arrangements well in advance to obtain the best prices, and delays in payment usually mean that I have to float the balance on my credit card over several weeks. I prefer to pay my credit card off in full every month, so this is a big inconvenience for me. I understand that some organizers want to wait until after the event to reimburse speakers, but this can be a significant burden, especially for speakers who do several conferences a year.</p>
 
                     <h3>Payment</h3>
-                    <p>For public events where other speakers are unpaid, I will not expect compensation. For private events, please contact me and we can discuss.</p>
+                    <p>For public events where other speakers are unpaid, I will not expect compensation. For private events, please contact me through <a href="https://nimbleautonomy.com">Nimble Autonomy</a> and we can discuss.</p>
 
                     <h3>Things That Help Me</h3>
                     <p>I’ll bring a Macbook or Macbook Pro and adapters to connect it to most modern projectors. All you need to provide is the projector, screen, and microphone. I have a slight preference for lapel (lavallière), or headset microphones, but I am adept at using handheld microphones as well.</p>
