--- a/public/404page.html
+++ b/public/404page.html
@@ -4,6 +4,15 @@
         <meta charset="utf-8">
         <title>Page Not Found</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2753331-2"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-2753331-2');
+        </script>
         <style>
 
             * {
@@ -54,16 +63,7 @@
     <body>
         <h1>Page Not Found</h1>
         <p>Sorry, but the page you were trying to view does not exist.</p>
-
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-2753331-2', 'kevingoldsmith.com');
-            ga('send', 'pageview');
-        </script>
+        <p>return to <a href="https://kevingoldsmith.com">KevinGoldsmith.com</a></p>
     </body>
 </html>
 <!-- IE requires 512+ bytes: http://www.404-error-page.com/404-error-page-too-short-problem-microsoft-ie.shtml -->
